--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -26,8 +26,6 @@
       }
       const randomId = randomIdChars.join('');
 
-
-
       return h('input', {
         id: this.props.forID,
         className: this.props.classNameWrapper,
@@ -38,46 +36,46 @@
   },
 });
 
-CMS.registerWidget('uniqueId', UniqueID,);
+CMS.registerWidget('uniqueId', UniqueID);
 
-const CategoriesControl = createClass({
-  handleChange(e) {
-    const separator = this.props.field.get('separator', ', ');
-      this.props.onChange(e.target.value.split(separator).map((e) => e.trim()));
-  },
+// const CategoriesControl = createClass({
+//   handleChange(e) {
+//     const separator = this.props.field.get('separator', ', ');
+//       this.props.onChange(e.target.value.split(separator).map((e) => e.trim()));
+//   },
 
-  render() {
-      const separator = this.props.field.get('separator', ',');
-      const { value } = this.props;
-      return h('input', {
-        id: this.props.forID,
-        className: this.props.classNameWrapper,
-        type: 'text',
-        value: value ? value.join(separator) : '',
-        onChange: this.handleChange,
-      });
-  },
-});
+//   render() {
+//       const separator = this.props.field.get('separator', ',');
+//       const { value } = this.props;
+//       return h('input', {
+//         id: this.props.forID,
+//         className: this.props.classNameWrapper,
+//         type: 'text',
+//         value: value ? value.join(separator) : '',
+//         onChange: this.handleChange,
+//       });
+//   },
+// });
 
-const CategoriesPreview = createClass({
-  render() {
-      return h(
-        'ul',
-        {},
-        this.props.value.map(function (val, index) {
-          return h('li', { key: index }, val);
-        })
-      );
-  },
-});
+// const CategoriesPreview = createClass({
+//   render() {
+//       return h(
+//         'ul',
+//         {},
+//         this.props.value.map(function (val, index) {
+//           return h('li', { key: index }, val);
+//         })
+//       );
+//   },
+// });
 
-const schema = {
-  properties: {
-      separator: { type: 'string' },
-  },
-};
+// const schema = {
+//   properties: {
+//       separator: { type: 'string' },
+//   },
+// };
 
-CMS.registerWidget('categories', CategoriesControl, CategoriesPreview, schema);
+// CMS.registerWidget('categories', CategoriesControl, CategoriesPreview, schema);
 </script>
 </body>
 </html>
